--- a/options.html
+++ b/options.html
@@ -2,24 +2,18 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="options.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <div class="header">
-        <h1>Scribbly</h1>
-        <img src="scribblyIcon.svg"/>
-    </div>
+    <h1>Helper AI</h1>
     <form id="options-form">
-        <div class="apiKeyHolder">
+        <div>
             <label for="api-key">OpenAI API Key:</label>
             <input type="text" id="api-key" name="api-key">
         </div>
-        <button type="submit" class="save">Save</button>
+        <button type="submit">Save</button>
     </form>
-    <div id="prompts-container">
-        <button id="add-prompt">Add Prompt</button>
-    </div>
     <script src="options.js"></script>
 </body>
 
