--- a/popup.html
+++ b/popup.html
@@ -2,28 +2,17 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="popup.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <div class="header">
-        <h1>Scribbly</h1>
-        <img src="scribblyIcon.svg"/>
-    </div>
-    <div class="description">
-        <p>
-        Use Scribbly to generate text, translate languages, and write code on any website.
-        </p>
-    </div>
-    <div class="options">
-        <p>
-            <a href="options.html" target="_blank">Open Options</a>
-        </p>
-    </div>
-    <div class="version">
-        <p><a href="https://myscribbly.com">Website</a></p>
-        <p>Version 1</p>
-    </div>
+    <h1>Helper AI</h1>
+    <p>
+        Use GPT-4 to generate text, translate languages, and write code on any website.
+    </p>
+    <p>
+        <a href="options.html" target="_blank">Open Options</a>
+    </p>
 </body>
 
 </html>
