text all messed up

--- a/popup.html
+++ b/popup.html
@@ -36,7 +36,7 @@
         
         <h1 style="font-size: 13px; color: white; 
         margin-top: 0px;" class="text2">
-        till the next break</h1>
+        till your next break</h1>
 
         <div class="options2" style="margin-bottom: 0px; display: flex; align-items: center;">
             <h1 style="font-size: 22px; color: white; margin-top: 5px; margin-bottom: 0px;" class="text">
@@ -62,22 +62,20 @@
     <div class="options">
 
         
-        <!-- <div id="reportBug">
-            <a href="options.html" target="_blank" class="my" style="font-size: 13px;">
-                &#x2626; Meditation Mode</a>
-        </div> -->
 
         <div id="reportBug">
             <a href="options.html" target="_blank" class="my" style="font-size: 13px;">
-                &#x2626; Change Settings</a>
+                &#9881; Change Settings</a>
         </div>
-        <div id="reportBug">
-            <a href="options.html" target="_blank" class="my" style="font-size: 13px;">
+
+        <div id="meditationMode">
+            <a target="_blank" class="my" style="font-size: 13px; cursor: pointer;">
                 &#x2626; Meditation Mode</a>
         </div>
+
         <div id="reportBug">
-            <a href='https://penparrot.com/contact-us' target="_blank" class="my" style="font-size: 13px;">
-                 &#10084; Support The Mission</a>
+            <a href='https://penparrot.lemonsqueezy.com/checkout/buy/69b59a6a-9fdb-4cda-965f-de6f24f6ea5a' target="_blank" class="my" style="font-size: 13px;">
+             &#10084; Support The Mission</a>
         </div>
 
         <div style="background-color: white; width: 300px; margin-top: 20px;
